<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

    <item android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />


    <item android:id="@+id/action_records"
        android:title="@string/action_articulos"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

    <item android:id="@+id/action_carrito"
        android:title="@string/action_carrito"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

    <item android:id="@+id/action_pedido"
        android:title="@string/action_pedido"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

     <item android:id="@+id/action_scan"
        android:title="@string/action_scan"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

     <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="101"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content"
        />

</menu>